# snaskii21

./: .gitignore  AUTHORS  AUTHORS.md  CODE_OF_CONDUCT.md  ChangeLog  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.ac  install_all.py  install_all.sh
.github/ISSUE_TEMPLATE/: config.yaml  issue-bug.md  issue-critical.md  issue-doc.md  issue-feature.md  issue-help.md  issue-wontfix.md
.github/workflows/: build.yml  codeql-analysis.yml  main.yml
doc/: CONTRIBUTING.md
docker_env/: Dockerfile  README.md
docs/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  pull_request_template.md
gui/: Makefile  README.md  color.h  game.c  game.h  main.c  snake.c  snake.h  wall.c  wall.h
gui/Road_Rage/: OFL.txt
scenes/: Makefile.am  intro.am  vidascii
scenes/game/: scene-0000001.txt  scene-0000002.txt  scene-0000003.txt  scene-0000004.txt
scenes/intro/: scene-0000001.txt  scene-0000002.txt  scene-0000003.txt  scene-0000004.txt  scene-0000005.txt  scene-0000006.txt  scene-0000007.txt  scene-0000008.txt  scene-0000009.txt  scene-0000010.txt  scene-0000011.txt  scene-0000012.txt  scene-0000013.txt  scene-0000014.txt  scene-0000015.txt  scene-0000016.txt  scene-0000017.txt  scene-0000018.txt  scene-0000019.txt  scene-0000020.txt  scene-0000021.txt  scene-0000022.txt  scene-0000023.txt  scene-0000024.txt  scene-0000025.txt  scene-0000026.txt  scene-0000027.txt  scene-0000028.txt  scene-0000029.txt  scene-0000030.txt  scene-0000031.txt  scene-0000032.txt  scene-0000033.txt  scene-0000034.txt  scene-0000035.txt  scene-0000036.txt  scene-0000037.txt  scene-0000038.txt  scene-0000039.txt  scene-0000040.txt  (+446 more)
src/: Makefile.am  score.c  score.h  ttsnake.c  ttsnake.sh  utils.c  utils.h
